--- a/recapproject/src/app/components/brand/brand.component.html
+++ b/recapproject/src/app/components/brand/brand.component.html
@@ -1,10 +1,12 @@
-<table class="table">
-    <thead>
-        <th>Brand Id</th>
-        <th>Brand Name</th>
-    </thead>
-    <tr *ngFor="let brand of brands">
-        <td>{{brand.brandId}}</td>
-        <td>{{brand.brandName}}</td>
-    </tr>
-</table>
+<ul class="list-group">
+    <li routerLink="/cars"
+        [class]="getAllBrandClass()"
+        (click)="empyyCurrentBrand()" 
+    >Tüm markalari göster</li>
+    <li routerLink="/cars/brand/+{{brand.brandId}}"
+        (click)="setCurrentBrand(brand)" 
+        [class]="getCurrentBrandClass(brand)" 
+    *ngFor="let brand of brands">
+        {{brand.brandName}}
+    </li>
+</ul>
