--- a/recapproject/src/app/components/rental/rental.component.html
+++ b/recapproject/src/app/components/rental/rental.component.html
@@ -5,6 +5,7 @@
         <th>Brand Name</th>
         <th>Rent Date</th>
         <th>Return Date</th>  
+        <th>Car Id</th>
     </thead>
     <tr *ngFor="let rental of rentals">
         <td>{{rental.rentalId}}</td>
@@ -12,5 +13,6 @@
         <td>{{rental.brandName}}</td>
         <td>{{rental.rentDate}}</td>
         <td>{{rental.returnDate}}</td>
+        <td>{{rental.carId}}</td>
     </tr>
 </table>
