--- a/recapproject/src/app/components/user/user.component.html
+++ b/recapproject/src/app/components/user/user.component.html
@@ -4,11 +4,13 @@
         <th>Customer Id</th>
         <th>First Name</th>
         <th>Last Name</th>
+        <th>Email</th>
     </thead>
     <tr *ngFor="let customer of customers">
         <td>{{customer.userId}}</td>
         <td>{{customer.customerId}}</td>
         <td>{{customer.firstName}}</td>
         <td>{{customer.lastName}}</td>
+        <td>{{customer.email}}</td>
     </tr>
 </table>
